# GTA5-External

./: CMakeLists.txt  LICENSE  README.md  premake5.lua
External Base/src/: External Base.aps  Functions.h  common.hpp  features.cpp  features.hpp  gui.cpp  logger.hpp  main.cpp  menu_settings.hpp  pointers.cpp  pointers.hpp  renderer.cpp  renderer.hpp  script.cpp  script_global.cpp  script_local.cpp
External Base/src/classes/: ped_factory.hpp  player.hpp
External Base/src/memory/: pattern.cpp  pattern.hpp  process.hpp
External Base/src/menu/: online_menu.h  player_menu.cpp  player_menu.h  setting.cpp  vehicle_menu.cpp
External Base/src/utility/: all.hpp  class_grabber.hpp  enums.hpp  external_class.hpp  utility.hpp  vector.hpp
External Base/src/utility/basic_utility/: basic.hpp
External Base/src/utility/network_utility/: network_utility.cpp
External Base/src/utility/player_utility/: player_utility.cpp  player_utility.h
External Base/src/utility/stats_utility/: stats_utility.cpp  stats_utility.h
scripts/: g3log.cmake  gtav-classes.cmake  imgui.cmake
src/: Functions.h  features.cpp  file_manager.hpp  imgui.ini  logger.hpp  main.cpp  pointer.hpp  pointers.cpp  pointers.hpp  renderer.cpp  renderer.hpp  resource.h  script.hpp  script_global.cpp  script_global.hpp  script_local.hpp  thread_pool.cpp
src/classes/: business_info.hpp  custscene_manager.hpp  friend_registry.hpp  game_setting.hpp  hash_table.hpp  ped_factory.hpp  player.hpp  player_crew.hpp
src/memory/: pattern.hpp  process.hpp
src/menu/: online_menu.cpp  player_menu.cpp  player_menu.h  vehicle_menu.h
src/utility/: address.hpp  all.hpp  class_grabber.hpp  external_class.hpp  utility.hpp  vector.hpp
src/utility/basic_utility/: basic.hpp
src/utility/network_utility/: network_utility.cpp  network_utility.h
src/utility/player_utility/: player_utility.cpp  player_utility.h
